--- a/main.html
+++ b/main.html
@@ -9,6 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		// Create the student object
+const student = {
+    name: "John"
+};
+
+// Function to get all keys from an object
+function getKeys(obj) {
+    return Object.keys(obj);
+}
+
+// Example usage
+console.log(getKeys(student)); // Output: ["name"]
+
 </script>
 
 </body>
